# lager_ext

./: .clang-format  .editorconfig  CMakeLists.txt  LICENSE
cmake/: lager_ext-config.cmake.in
doc/: api_guide.md  lager_concepts_guide.md  libs.md
docs/: boost_interprocess_guide.md  zug_immer_lager_guide.md
example/: CMakeLists.txt  event_demo.cpp  ipc_domain_demo.cpp  shared_buffer_demo.cpp
example/base/: main.cpp
example/demo/: demo.cpp  main.cpp
example/editor/: editor_main.cpp
example/engine/: shared_value_demo.cpp
example/event_demo/: main.cpp
example/ipc_benchmark/: main.cpp
example/ipc_demo/: main.cpp
include/immer/: box.hpp
include/lager/detail/: signal.hpp
include/lager/event_loop/: qt.hpp
include/lager_ext/: api.h  at_lens.h  builders.h  concepts.h  delta_undo.h  delta_undo_engine.h  diff_collector.h  editor_engine.h  erased_lens.h  event_bus.h  event_bus_ipc.h  fast_shared_value.h  immer_config.h  ipc.h  ipc_message.h  json_pointer.h  lager_adapters.h  lager_ext_config.h  lager_lens.h  multi_store.h  multi_store_engine.h  mutable_value.h  path.h  path_core.h  path_types.h  path_utils.h  path_watcher.h  scene_types.h  serialization.h  shared_buffer_spsc.h  shared_memory_pool.h  shared_state.h  shared_value.h  static_path.h  string_path.h  undo.h  utils.h  value.h  value_diff.h  value_fwd.h  (+1 more)
qml/: main.qml
source/: at_lens.cpp  delta_undo.cpp  delta_undo_engine.cpp  diff_collector.cpp  editor_engine.cpp  erased_lens.cpp  event_bus.cpp  event_bus_ipc.cpp  ipc.cpp  json_pointer.cpp  lager_adapters.cpp  lager_lens.cpp  multi_store.cpp  multi_store_engine.cpp  mutable_value.cpp  path.cpp  path_core.cpp  path_types.cpp  path_utils.cpp  path_watcher.cpp  shared_buffer_spsc.cpp  shared_memory_pool.cpp  shared_state.cpp  shared_value_demo.cpp  shared_value_region.cpp  static_path.cpp  string_path.cpp  utils.cpp  value.cpp  value_diff.cpp  windows_message.cpp
test/: CMakeLists.txt  test_diff.cpp  test_event_bus.cpp  test_event_bus_ipc.cpp  test_immer_value.cpp  test_lager_lens.cpp  test_mutable_value.cpp  test_path.cpp  test_shared_value.cpp
